--- a/src/assets/investors-screen.scss
+++ b/src/assets/investors-screen.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     background: url("/spaceBG.png") no-repeat center/cover;
+    background-color: #000000;
     animation: fadeIn 0.8s ease-out;
 
     @media (max-width: 768px) {
