--- a/src/assets/jobs-screen.scss
+++ b/src/assets/jobs-screen.scss
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     background: url("/spaceBG.png") no-repeat center/cover;
+    background-color: #000000;
     animation: fadeIn 0.8s ease-out;
 
     @media (max-width: 768px) {
